--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100;1,300&display=swap');
 
 * {
   font-family: "Roboto", sans-serif;
@@ -32,7 +32,7 @@ a, p {
 
 .top {
   background-color: #1F2937;
-  padding: 1rem 10rem;
+  padding: 1rem 15rem;
 }
 
 .header{
@@ -66,9 +66,10 @@ h1 {
 button {
   background-color: #3882F6;
   color: #F9FAF8;
+  font-size: 1rem;
   font-weight: bold;
   border-radius: 0.5rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 2rem;
   border: 2px solid #3882F6;
 }
 
@@ -78,11 +79,11 @@ button {
 
 .left {
   box-sizing: content-box;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 .right {
-  margin-left: 1rem;
+  margin-left: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,26 +93,28 @@ button {
 .middle-one {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 2rem 0;
+  padding: 0 25rem 10rem 25rem;
 }
 
 h2 {
+  margin: 4rem;
   font-size: 36px;
   color: #1F2937;
   font-weight: bold;
 }
 
 .small-picture {
-  width: 7rem;
-  height: 7rem;
+  width: 12rem;
+  height: 12rem;
   border: 0.25rem solid #3882F6;
   border-radius: 0.5rem;
 }
 
 .card p {
   color: #1F2937;
+  max-width: 12rem;
 }
 
 .grid {
@@ -119,7 +122,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2em;
+  gap: 3em;
 }
 
 .card {
@@ -136,7 +139,7 @@ h2 {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  padding: 5rem 20rem;
+  padding: 10rem 25rem;
   background-color: #E5E7EB;
 }
 
@@ -145,23 +148,24 @@ h3 {
   font-size: 36px;
   font-style: italic;
   color: #1F2937;
-  font-weight: 100;
+  font-weight: lighter;
 }
 
 h4 {
   font-size: 24px;
   margin: 0;
   margin-left: auto;
+  margin-right: 1em;
 }
 
 .bottom {
-  padding: 5rem 10rem;
+  padding: 8rem 15rem;
 }
 
 .small-box {
   border-radius: 0.5rem;
   background-color: #3882F6;
-  padding: 3rem 7rem;
+  padding: 4rem 8rem;
 }
 
 .bottom p {
@@ -200,5 +204,5 @@ h5 {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2em 0;
+  padding: 3em 0;
 }
